add tempfile variant as suggested by Sascha Schneider, fix credential issues

--- a/roles/apps/tasks/appcenter-dev.yaml
+++ b/roles/apps/tasks/appcenter-dev.yaml
@@ -10,7 +10,7 @@
 
 - name: install apps from test appcenter
   shell:
-    cmd: "/usr/bin/univention-app install {{ item }} --noninteractive --pwdfile /tmp/univention"
+    cmd: "/usr/bin/univention-app install {{ item }} --noninteractive --pwdfile {{ rootpwfile.path }}"
   loop: "{{ apps_dev }}"
   tags: apps
 
